fixed color contrast a11y issues

--- a/src/components/form/Form-UI.scss
+++ b/src/components/form/Form-UI.scss
@@ -81,7 +81,7 @@
   width: fit-content;
   border: none;
   background-color: $Color--Primary;
-  color: $Color--Background;
+  color: $Color--Text;
   padding: size(2) size(6);
   @include No-Spacing--Large;
   border-radius: size(0.5);
