--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -7,7 +7,7 @@
   position: absolute;
   top: size(2.5);
   left: size(5);
-  color: $Color--Text-Light;
+  color: $Color--Text;
   transition: $Transition-Duration;
 }
 
